# MarketResearcherCrewAI

./: .gitignore  README.md  pyproject.toml
src/dokuprojekt1/: crew.py  main.py  report.md
src/dokuprojekt1/config/: tasks.yaml
