[project]
name = "dokuprojekt1"
version = "0.1.0"
description = "DokuProjekt1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "pyinstaller>=6.11.1",
]

[project.scripts]
dokuprojekt1 = "dokuprojekt1.main:run"
run_crew = "dokuprojekt1.main:run"
train = "dokuprojekt1.main:train"
replay = "dokuprojekt1.main:replay"
test = "dokuprojekt1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
